--- a/src/app/places/offers/new-offer/new-offer.page.html
+++ b/src/app/places/offers/new-offer/new-offer.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>new-dash-offer</ion-title>
+    <ion-title>new-offer</ion-title>
   </ion-toolbar>
 </ion-header>
 
