--- a/src/app/places/discover/discover.page.html
+++ b/src/app/places/discover/discover.page.html
@@ -19,7 +19,7 @@
           <ion-card-content>
             <p>{{ loadedPlaces[0].description }}</p>
           </ion-card-content>
-          <div text-right padding>
+          <div>
             <ion-button
               fill="clear"
               color="primary"
@@ -39,7 +39,10 @@
     <ion-row>
       <ion-col size="12" size-sm="8" offset-sm="2" text-center>
         <ion-list>
-          <ion-item *ngFor="let place of loadedPlaces.slice(1)">
+          <ion-item 
+          *ngFor="let place of loadedPlaces.slice(1)"
+          [routerLink]="['/', 'places', 'tabs', 'discover', 'place.id']"
+          detail>
             <ion-thumbnail slot="start">
               <ion-img [src]="place.imageUrl"></ion-img>
             </ion-thumbnail>
