added a new offer addition request

--- a/src/app/places/offers/edit-offer/edit-offers.page.html
+++ b/src/app/places/offers/edit-offer/edit-offers.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>edit-offers</ion-title>
+    <ion-title>Edit Offer</ion-title>
   </ion-toolbar>
 </ion-header>
 
